@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{20458D50-3D54-45DD-9E22-5B2289B6AB91}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -74,6 +74,7 @@
     <Compile Include="ExpressionUtilities.cs" />
     <Compile Include="IBindingEnvironment.cs" />
     <Compile Include="Language\Channel.cs" />
+    <Compile Include="Language\QueueChannel.cs" />
     <Compile Include="Language\Future.cs" />
     <Compile Include="Language\IChannel.cs" />
     <Compile Include="Language\IReference.cs" />
