@@ -48,5 +48,12 @@
 
             return method.Invoke(objenv, parameters);
         }
+
+        public virtual object Invoke(ICallable method, object[] parameters)
+        {
+            IBindingEnvironment objenv = new ObjectEnvironment(this, method.Environment);
+
+            return method.Invoke(objenv, parameters);
+        }
     }
 }
